--- a/assets/styles.css
+++ b/assets/styles.css
@@ -95,7 +95,6 @@ section {
   max-width: 100%;
   height: auto;
   margin-left: 140px;
-  /* border-radius: 41% 59% 55% 45% / 24% 15% 85% 76% ; */
   
 }
 
@@ -408,19 +407,12 @@ form .send-btn:hover {
   box-shadow: 4px 4px var(--main-color);
 }
 
-/* Footer */
-/* .footer {
-  text-align: center;
-  padding: 30px;
-  color: var(--2nd-main-color);
-  background: #0b0b13;
-  line-height: 1.8rem;
-  margin-top: 3rem;
-} */
 .social-icons {
   position: absolute;
-  bottom: 150px;
-  right: 390px;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  margin-bottom: 20px; /* Adjust as needed */
 }
 .social-icons a {
   display: inline-block;
@@ -571,5 +563,93 @@ form .send-btn:hover {
 @media (max-width: 768px) {
   .footer {
       padding: 15px;
+  }
+}
+/* Media query for devices with screen size between 769px and 1024px */
+@media (min-width: 769px) and (max-width: 1024px) {
+  /* Adjustments for header */
+  header {
+    padding: 20px 8%;
+  }
+}
+
+/* Media query for devices with screen size between 481px and 768px */
+@media (min-width: 481px) and (max-width: 768px) {
+  /* Adjustments for navbar */
+  .navbar {
+    padding: 0;
+  }
+  .navbar a {
+    border-left: none;
+    border-bottom: 2px solid var(--main-color);
+    margin: 0;
+    padding: 1rem 0;
+  }
+
+  /* Adjustments for home section */
+  .home {
+    padding: 40px 3%;
+  }
+  .home-img img {
+    margin-left: 0;
+  }
+  .home-text h1 {
+    font-size: 3rem;
+  }
+  .home-text h5 {
+    font-size: 1.5rem;
+  }
+
+  /* Adjustments for about section */
+  .about {
+    padding: 40px 3%;
+  }
+}
+
+/* Media query for devices with screen size up to 480px */
+@media (max-width: 480px) {
+  /* Adjustments for header */
+  header {
+    padding: 18px 5%;
+  }
+
+  /* Adjustments for home section */
+  .home {
+    padding: 30px 3%;
+  }
+  .home-img img {
+    margin-left: 0;
+  }
+  .home-text h1 {
+    font-size: 2.5rem;
+  }
+  .home-text h5 {
+    font-size: 1.2rem;
+  }
+
+  /* Adjustments for about section */
+  .about {
+    padding: 30px 3%;
+  }
+}
+
+/* Media query for devices with screen size above 1024px */
+@media (min-width: 1025px) {
+  /* Add specific adjustments for larger screens if needed */
+}
+@media (max-width: 768px) {
+  .social-icons,.about-img {
+    display: none;
+  }
+  .home-img{
+    max-width: 50%;
+    margin-left: 30%;
+  }
+}
+
+/* Media query for devices with screen size up to 480px */
+@media (max-width: 480px) {
+  .social-icons {
+    display: none;
   }
 }
