Fixed Footer animation

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -544,7 +544,7 @@ form .send-btn:hover {
   border-radius: 50px;
 }
 .footer-link img:hover{
-  background-color: white;
+/*   background-color: white; */
   border-radius: 50px;
 }
 
